# cv-templater

./: .gitignore  README.md  convert_cv.py  htmltopdf.py  index.html  main.py  pyproject.toml  repo-description.txt  requirements.txt  script.js  styles.css  techTags.json  test_script.sh
.github/workflows/: pages.yml
